@@ -71,6 +71,8 @@ Adapter precondition and routing
 - ADAPTER_PLUGIN_DUPLICATE
 - ADAPTER_PLUGIN_UNUSED (plugin provided where no plugin path is valid for resolved adapter route)
 - ADAPTER_POLICY_INVALID
+- ADAPTER_POLICY_FILE_INVALID
+- ADAPTER_POLICY_FILE_UNREADABLE
 - ADAPTER_DISABLED_BY_POLICY
 - ADAPTER_TEMPORARILY_UNAVAILABLE
 - IAC_UNSUPPORTED_FORMAT
